<resources>
    <string name="app_name">MyAlarmManager</string>

    <!--Create Alarm-->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="alarm_note_label">Alarm Note/Label</string>
</resources>
